# examiner

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  DEPLOY_GCP.md  Makefile  deploy.sh  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/scripts/: seed_admin.py
apps/api/src/: health.py  main.py
apps/api/src/adaptive/: irt.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/ai/: document_service.py  models.py  router.py  schemas.py  service.py
apps/api/src/ai/prompts/: generator.py  registry.py
apps/api/src/ai/providers/: anthropic_provider.py  base.py  groq_provider.py
apps/api/src/ai/rag/: chunker.py  documents.py  embeddings.py  retriever.py
apps/api/src/ai/verification/: language_checker.py  leak_detector.py  schema_validator.py
apps/api/src/analytics/: router.py  schemas.py  service.py
apps/api/src/analytics/exporters/: csv.py  pdf.py
apps/api/src/auth/: dependencies.py  router.py  schemas.py  service.py
apps/api/src/core/: config.py  database.py  exceptions.py  feature_flags.py  middleware.py  rate_limit.py  redis.py  security.py  storage.py
apps/api/src/exams/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/grading/: deterministic.py  llm_grader.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/isg/: blueprints.py  router.py  rubrics.py  schemas.py  service.py
apps/api/src/orgs/: repository.py  router.py  schemas.py  service.py
apps/api/src/questions/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/sessions/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/tasks/: calibration.py  celery_app.py  export.py  grading.py  isg_generation.py  ping.py  question_generation.py
apps/api/src/users/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health.py
apps/api/tests/unit/: conftest.py  test_adaptive_service.py  test_analytics.py  test_auth_service.py  test_chunker.py  test_config.py  test_deterministic_graders.py  test_exam_service.py  test_feature_flags.py  test_irt.py  test_isg_blueprints.py  test_isg_rubrics.py  test_language_checker.py  test_leak_detector.py  test_llm_grader.py  test_question_schemas.py  test_schema_validator.py  test_security.py  test_session_service.py
apps/worker/: pyproject.toml
apps/worker/src/: celery_app.py
apps/worker/src/tasks/: ping.py
docker/: api.Dockerfile  init-pgvector.sql  nginx.conf  web.Dockerfile  worker.Dockerfile
(+32 files in other folders)
